# MealDrop

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
MealDrop/: asgi.py  settings.py  urls.py  wsgi.py
